--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 :root {
 	--color-fire: #ff7402;
@@ -22,8 +22,8 @@
 	--color-shadow: #7b62a3;
 	--color-unknow: #757575;
 
-	--color-primary: #006d77;
-	--color-primary-hover: #83c5be;
+	--color-primary: #200077;
+	--color-primary-hover: #2d059b;
 }
 
 * {
@@ -33,7 +33,7 @@
 }
 
 body {
-	font-family: 'Montserrat';
+	font-family: 'Nova Square', sans-serif;
 }
 /* Globales */
 .container {
@@ -48,6 +48,7 @@ header {
 	justify-content: space-between;
 
 	padding: 40px 0;
+	border-bottom: 1px solid #ccc;
 }
 
 .logo img {
@@ -97,11 +98,12 @@ header form {
 	cursor: pointer;
 	font-weight: 500;
 	letter-spacing: 2px;
+	transition: transform 0.3s ease;
 }
 
 .btn-search:hover {
 	background-color: var(--color-primary-hover);
-	color: #000;
+	transform: scale(1.05);
 }
 
 /* Btn Filter */
@@ -134,6 +136,15 @@ header form {
 .card-pokemon {
 	cursor: pointer;
 	text-decoration: none;
+	border: 1px inset "";
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+	transition: box-shadow 0.3s ease, transform 0.3s ease; 
+}
+
+.card-pokemon:hover {
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5); /* Sombra más grande y más oscura */
+    transform: translateY(-5px); /* Desplazar la tarjeta hacia arriba */
 }
 
 .card-img {
@@ -440,9 +451,10 @@ Styles of Pokemon Single Page
 	color: #fff;
 	border-radius: 10px;
 	cursor: pointer;
+	transition: transform 0.3s ease;
 }
 
 .btn-load-more:hover{
 	background-color: var(--color-primary-hover);
-	color: #000;
+	transform: scale(1.05);
 }
